--- a/application/templates/main.html
+++ b/application/templates/main.html
@@ -17,6 +17,12 @@
 		<script type="text/javascript" src="./static/script/show.js"></script>
 		<script type="text/javascript" src="./static/script/submit_run.js"></script>
     </head>
+    <style>
+            body{
+                background-color: #FEF9EF;
+                font-family: Consolas,"Times New Roman";
+            }
+    </style>
 
 
     <body>
