--- a/application/templates/main.html
+++ b/application/templates/main.html
@@ -8,6 +8,12 @@
 		
 		<!--our css style-->
 		<link rel="stylesheet" type="text/css" href="./static/style/csss.css">
+        <style>
+            body{
+                background-color: #FEF9EF;
+                font-family: Consolas,"Times New Roman";
+            }
+        </style>
 		
 		<!--jquery-->
 		<script type="text/javascript" src="./static/script/jquery-3.5.1.js"></script>
